--- a/leads/templates/leads/leads_list.html
+++ b/leads/templates/leads/leads_list.html
@@ -10,9 +10,11 @@
         <div>
             <h1 class="text-4xl text-gray-800">Mijozlar</h1>
         </div>
+        {% if request.user.is_organiser %}
         <div>
             <a class="y=text-gray-500 hover:text-blue-700" href="{% url 'leads:lead-create' %}">Yaratish</a>
         </div>
+        {% endif %}
     </div>
     <div class="flex flex-wrap">
       {% for lead in leads %}
@@ -26,7 +28,7 @@
           <div class="flex-grow">
             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ lead.ismi }} {{ lead.familiyasi }}</h2>
             <p class="leading-relaxed text-base">SUSYS Academy o'quvchisi</p>
-            <h5 class="leading-relaxed text-base text-bleak-500">Agent: {{ lead.agent }}</h5>
+            <h5 class="leading-relaxed text-base text-bleak-500">organisation: {{ lead.organisation }}</h5>
             <a href="{% url 'leads:detallar' lead.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">Batafsil
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
