--- a/leads/templates/leads/leads_detail.html
+++ b/leads/templates/leads/leads_detail.html
@@ -17,6 +17,9 @@
                 Ma'lumotlar
             </a>
             {% if request.user.is_organiser %}
+            <a href="{% url 'leads:category_update_detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
+                Fani
+            </a>
             <a href="{% url 'leads:update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
                 O'zgartirish
             </a>
